# bananagrams_solver_web

./: README.md  index.html  package-lock.json  package.json  run.py  short_dictionary.txt  vite.config.ts  vite.config.ts.timestamp-1723297373436.js
.github/workflows/: node.js.yml
assets/: bg_solver_bg-7cff55cb.wasm  bg_solver_bg-cacc7644.wasm  index-0255add0.js  index-16c1f214.js  index-1959168a.js  index-2bc5fad8.js  index-35536b2e.js  index-5bf24377.js  index-6c78b17c.css  index-6f0727da.css  index-772d5dce.js  index-9d99d164.js  index-b184ba23.js  index-cb97942b.js  index-f61da3f7.css  solver-22b11eba.js  solver-830444f0.js  solver-8eedcf76.js  solver-fa6541c3.js
bg-solver/: Cargo.toml  LICENSE_MIT  README.md
bg-solver/src/: dictionary.txt  lib.rs  updated_short_dictionary.txt
src/: App.css  App.tsx  letter_input.tsx  link_wrapper.tsx  main.tsx  playable_words.tsx  playable_words_list.tsx  playable_words_stats.tsx  results_display.tsx  settings.tsx  solution_time.tsx  solver.ts  types.ts  utilities.ts  wrapper_controls.tsx
