[package]
name = "bg-solver"
version = "0.1.0"
authors = ["William Watson <williamdwatson1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
hashbrown = "0.14.5"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.205", features = ["derive"] }
lazy_static = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = "fat"
